Issue #9901: Destroying the GIL in Py_Finalize() can fail if some other threads are still running.  Instead, reinitialize the GIL on a second call to Py_Initialize().